--- a/www/index.html
+++ b/www/index.html
@@ -1,21 +1,64 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
-  
+
   <!--scipts-->
   <script src="components/loader.js"></script>
- 
+  <script src="lib/query-3.6.0.min.js"></script>
+  <script src="components/acao.js"></script>
   <!--estilos-->
   <link rel="stylesheet" href="components/loader.css">
+  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css"
   <link rel="stylesheet" href="css/style.css">
 
 
   
 </head>
 <body>
-  teste
+  <div class="container">
+     <div class="row">
+       <div class="col-12">
+         <div class="jumbotron">
+         <h2> calcular</h2>
+       </div>
+      </div>
+    </div>
+  <div class="row">
+     <div class="col-12">
+       <div class="form-group">
+          <label for="">valor 1:</label>
+          <input type="number" class="form-control" id="valor1">
+         </div>
+       </div>
+    </div> 
+     <div class="row">
+     <div class="col-12">
+       <div class="form-group">
+          <label for="">valor 2:</label>
+          <input type="number" class="form-control" id="valor2">
+         </div>
+       </div>
+    </div> 
+      <div class="row">
+     <div class="col-12">
+       <div class="form-group">
+          <button class="btn btn-primary btn-block" id="somar"> somar</button>
+          </div>
+       </div>    
+    </div> 
+     
+        <div class="row">
+     <div class="col-12">
+       <div class="form-group">
+          <label for="">resultado:</label>
+          <input type="text" class="form-control" readonly id="resultado">
+         </div>
+       </div>
+    </div> 
+</div>
 </body>
 </html>
+
+
